--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="./style/style.css" rel="stylesheet" />
+        <link href="./public/style/style.css" rel="stylesheet" />
         <title>To do List</title>
     </head>
     <body>
@@ -18,6 +18,6 @@
                 <ul id="listItems"></ul>
             </div>
         </div>
-        <script src="./script/script.js"></script>
+        <script src="./public/script/script.js"></script>
     </body>
 </html>
