--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,6 +8,7 @@
         <title>To do List</title>
     </head>
     <body>
+        <div id="root"></div>
         <div id="listContainer">
             <div id="toDoList">
                 <input
